--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Irish Debbarma # the main title
 
-tagline: Academic Website # it will display as the subtitle
+tagline: Academic Website | Maths PhD @ NUS | Arithmetic Geometry | Langlands Program # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   First Year Mathematics PhD at the National University of Singapore.
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://irishdb.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: irishdb # change to your GitHub username
 
 #twitter:
 #  username: twitter_username # change to your Twitter username
@@ -34,8 +34,8 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: irish_debbarma
+  email: e1583354@u.nus.edu # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://x.com/bourbakirish/photo
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
